# AIrcraft

./: .gitignore  .gitmodules  LICENSE  README.md  ddpgActor_Model.pth  ddpgAgent_Scores.csv  ddpgCritic_Model.pth  environment.yml  fitted_models_casadi.pkl  jacobian_matrix.csv  problem.md  pyproject.toml  setup.py  todo.md
.github/workflows/: update-docs.yml
data/glider/: cessna.json  glider.stl  glider_fs.json  glider_wt.json  linearised.csv  linearised.json  problem_definition copy.json  problem_definition.json  quad_definition.json
data/networks/: ddpgActor_Model.pth  ddpgCritic_Model.pth  linearised.csv  (+2 more)
docs/: control.md  data.md  dynamics.md  integrators.md  models.md  nlp.md  state.md
docsold/: aerodynamics.md  dynamics.md  examples.md  models.md  time.md
main/: claude_test.py  control.py  curriculum.py  determine_com.py  dynamics.py  fitted_models_casadi.pkl  linear_coefficients.py  mhtt.py  neuro.ipynb  optimization.py  plot_control.py  polyfit.ipynb  polyfit.py  polynomial_model.py  preprocess.py  quad_control.py  rl.py  train.py  trim copy.py  trim.py  visualise_forces.py
src/: control.py  control_minimal_dynamics copy.py  control_minimal_dynamics.py  dataloader.py  dubins.py  dynamics.cpp  dynamics.py  dynamics_minimal.py  dynamics_ned.py  dynamics_quad.py  dynamics_trimming.py  initialisation.py  mhe.py  minimal.py  models.py  moving_horizon.py  numpydynamics.py  pid_dynamics.py  planner.py  plot.py  plot_control.py  plotting.py  plotting_minimal.py  plotting_ned.py  rpg_optimise.py  test_dynamics.ipynb  trajectory.py  utils.py  waypoints.py
(+107 files in other folders)
